--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>ar.edu.davinci</groupId>
 	<artifactId>adoptame</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Sistema Gestion Alumno</name>
+	<name>Sistema Gestion WEB Adoptame</name>
 	<description>Adopcion de mascotas</description>
 
 	<parent>
@@ -33,6 +33,16 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
 
 		<!-- TEST -->
 		<dependency>
