--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,12 @@
 server.port = 8090
 spring.aop.proxy-target-class=true
 
-# DataSource settings: set here your own configurations for the database 
-# connection. In this example we have "recursos_humanos" as database name and 
+# DataSource settings: set here your own configurations for the database
+# connection. In this example we have "recursos_humanos" as database name and
 # "root" as username and password.
-spring.datasource.url=jdbc:mysql://localhost:3308/recursos_humanos
+spring.datasource.url=jdbc:mysql://localhost:3306/adoptameBBDD
 spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.password=12345
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -16,7 +16,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=none
