--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.aop.proxy-target-class=true
 # "root" as username and password.
 spring.datasource.url=jdbc:mysql://localhost:3306/adoptameBBDD
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=12345678
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -16,7 +16,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto =update
+spring.jpa.hibernate.ddl-auto =create-drop
 
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=none
