--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,7 +6,7 @@ spring.aop.proxy-target-class=true
 # "root" as username and password.
 spring.datasource.url=jdbc:mysql://localhost:3306/adoptameBBDD
 spring.datasource.username=root
-spring.datasource.password=123455678
+spring.datasource.password=12345
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
