--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,10 @@
 			<version>1.4.194</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 	</dependencies>
 
