--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,18 @@ spring.aop.proxy-target-class=true
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "recursos_humanos" as database name and 
 # "root" as username and password.
-spring.datasource.url=jdbc:mysql://localhost:3306/adoptamebbdd
-spring.datasource.username=root
-spring.datasource.password=12345
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/adoptamebbdd
+#spring.datasource.username=root
+#spring.datasource.password=12345
+
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
