cambio directorio de imagenes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,4 +53,4 @@ spring.servlet.multipart.max-request-size=50MB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=/Users/lucas/adoptameImagenes
+file.upload-dir=./tmp
