--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@ spring.aop.proxy-target-class=true
 # connection. In this example we have "recursos_humanos" as database name and 
 # "root" as username and password.
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/adoptamebbdd
-#spring.datasource.username=root
-#spring.datasource.password=12345
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.generate-ddl=true
 
 
 spring.datasource.driverClassName=org.postgresql.Driver
