--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,21 @@
 			<artifactId>lucene-spatial</artifactId>
 			<version>8.4.1</version>
 		</dependency>
+
+
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.26.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary</artifactId>
+			<version>1.0.7</version>
+		</dependency>
+
+
 	</dependencies>
 
 
