--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 			<version>1.0.7</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java -->
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.0.1</version>
+		</dependency>
 
 	</dependencies>
 
