fix properties cloudinary

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,6 +62,6 @@ spring.servlet.multipart.max-request-size=50MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=./tmp
-cloudinary.name="ddetocnzj"
-cloudinary.apikey="462997364764234"
-cloudinary.apiSecret="qfNhbDEptEIZV1kSe70O8IZRIcE"
+cloudinary.name=ddetocnzj
+cloudinary.apikey=462997364764234
+cloudinary.apiSecret=qfNhbDEptEIZV1kSe70O8IZRIcE
