variable de entorno con api key snedgrid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,4 @@ file.upload-dir=./tmp
 cloudinary.name=ddetocnzj
 cloudinary.apikey=462997364764234
 cloudinary.apiSecret=qfNhbDEptEIZV1kSe70O8IZRIcE
+sendgrid.api.key=${SENDGRID_API_KEY}
